<resources>
    <string name="app_name">RecipeApp</string>


    <!-- MENU ITEM STRINGS-->
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_rateus">Rate Us</string>
    <string name="favs">Favorites</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="random_recs">Random Recommendations</string>
    <string name="add_favorites">Add Favorites</string>
    <string name="searchHint">Search For Meal</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>


</resources>
