<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app    ="http://schemas.android.com/apk/res-auto"
    xmlns:tools  ="http://schemas.android.com/tools"
    tools:context="tr.com.mskr.sunshine22.MainActivity">

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rateus"
        android:icon="@drawable/ic_star_black_24dp"
        android:orderInCategory="102"
        android:title="@string/action_rateus"
        app:showAsAction="never"/>
</menu>