<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme        ="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/random_recs"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark" />

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/vp_randoms">
    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:id="@+id/slider_dots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal">
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/favorites"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="5"
            android:drawableLeft="@drawable/ic_favorite_black_24dp"
            android:text="@string/favs"
            android:paddingLeft="16dp"/>

        <Button
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="5"
            android:drawableLeft="@drawable/ic_search_black_24dp"
            android:text="@string/search"
            android:paddingLeft="16dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_categories"/>

</LinearLayout>