<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/DarkOliveGreen" />

        <ImageView
            android:id="@+id/iv_recipe_image"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/tv_recipe_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:gravity="center"
            android:textColor="@color/DarkOliveGreen" />

        <TextView
            android:id="@+id/tv_recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:gravity="center"
            android:textColor="@color/DarkOliveGreen" />

        <TextView
            android:id="@+id/tv_recipe_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/add_fav_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_favorites" />

    </LinearLayout>
</ScrollView>